# tmux-interface-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  README.md  ROADMAP.md  TREE.md
.github/workflows/: actions.yml
scripts/: generate_manpages.sh  grep_options.sh  grep_options_part1.sh  grep_options_part2.sh  grep_variables.sh  tmux_error_mock.sh  tmux_mock.sh  tmux_setup.sh  tmux_test.sh  tmux_variables_test.py
scripts/man_tmux/: build_all.sh  generate_manpages.sh  grep_options.sh  grep_variables.sh  versions.var
src/: buffers.rs  clients_and_sessions.rs  clients_and_sessions_tests.rs  error.rs  global_and_session_environment.rs  hooks.rs  key_bindings.rs  key_bindings_tests.rs  layout.rs  layout_cell.rs  layout_cell_tests.rs  layout_checksum.rs  layout_tests.rs  lib.rs  miscellaneous.rs  options.rs  options_tests.rs  pane.rs  pane_tabs.rs  pane_tests.rs  panes.rs  panes_tests.rs  session.rs  session_stack.rs  session_tests.rs  sessions.rs  sessions_tests.rs  status_line.rs  tmux.rs  tmux_command.rs  tmux_interface.rs  tmux_interface_error.rs  tmux_interface_tests.rs  tmux_option.rs  tmux_option_tests.rs  version.rs  version_tests.rs  window.rs  window_flag.rs  window_tests.rs  (+4 more)
src/commands/: constants.rs  mod.rs  tmux.rs  tmux_bin.rs  tmux_bin_command.rs  tmux_bin_command_tests.rs  tmux_bin_commands.rs  tmux_bin_commands_tests.rs  tmux_command.rs  tmux_command_list.rs  tmux_command_list_tests.rs  tmux_command_tests.rs  tmux_commands.rs  tmux_commands_tests.rs  tmux_macro.rs  tmux_output.rs  tmux_tests.rs
src/commands/buffers/: choose_buffer.rs  choose_buffer_macro.rs  choose_buffer_tests.rs  clear_history.rs  clear_history_macro.rs  clear_history_tests.rs  copy_buffer.rs  copy_buffer_macro.rs  copy_buffer_tests.rs  delete_buffer.rs  delete_buffer_macro.rs  delete_buffer_tests.rs  list_buffers.rs  list_buffers_macro.rs  list_buffers_tests.rs  load_buffer.rs  load_buffer_macro.rs  load_buffer_tests.rs  mod.rs  paste_buffer.rs  paste_buffer_macro.rs  paste_buffer_tests.rs  save_buffer.rs  save_buffer_macro.rs  save_buffer_tests.rs  set_buffer.rs  set_buffer_macro.rs  set_buffer_tests.rs  show_buffer.rs  show_buffer_macro.rs  show_buffer_tests.rs
src/commands/clients_and_sessions/: attach_session.rs  attach_session_macro.rs  attach_session_tests.rs  client_flags.rs  detach_client.rs  detach_client_macro.rs  detach_client_tests.rs  has_session.rs  has_session_macro.rs  has_session_tests.rs  kill_server.rs  kill_server_macro.rs  kill_server_tests.rs  kill_session.rs  kill_session_macro.rs  kill_session_tests.rs  list_clients.rs  list_clients_macro.rs  list_clients_tests.rs  list_commands.rs  list_commands_macro.rs  list_commands_tests.rs  list_sessions.rs  list_sessions_macro.rs  list_sessions_tests.rs  lock_client.rs  lock_client_macro.rs  lock_client_tests.rs  lock_session.rs  lock_session_macro.rs  lock_session_tests.rs  mod.rs  new_session.rs  new_session_macro.rs  new_session_tests.rs  refresh_client.rs  refresh_client_macro.rs  refresh_client_tests.rs  rename_session.rs  rename_session_macro.rs  (+19 more)
src/commands/common/: allow_actions.rs  client_flags.rs  client_flags_tests.rs  mod.rs  pane_size.rs  popup_border_lines_type.rs  position.rs  prompt_type.rs  refresh_client_size.rs  size.rs  state.rs  subscribe.rs  version.rs
src/commands/global_and_session_environment/: mod.rs  set_environment.rs  set_environment_macro.rs  set_environment_tests.rs  show_environment.rs  show_environment_macro.rs  show_environment_tests.rs
src/commands/hooks/: mod.rs  set_hook.rs  set_hook_macro.rs  set_hook_tests.rs  show_hooks.rs  show_hooks_macro.rs  show_hooks_tests.rs
src/commands/key_bindings/: bind_key.rs  bind_key_macro.rs  bind_key_tests.rs  list_keys.rs  list_keys_macro.rs  list_keys_tests.rs  mod.rs  send_keys.rs  send_keys_macro.rs  (+7 more)
src/common/: mod.rs  pane_options.rs  server_options.rs  server_options_tests.rs  session_options.rs  session_options_tests.rs  window_options.rs  window_options_tests.rs
src/control_mode/: constants.rs  control_mode.rs  control_mode_ctl.rs  control_mode_tests.rs  mod.rs
src/copy_mode/: copy_mode.rs  copy_mode_tests.rs  mod.rs
src/format/: format.rs  format_output.rs  format_output_tests.rs  format_tests.rs  mod.rs  variable.rs  variable_output.rs  variable_output_tests.rs  variable_tests.rs
src/formats/: formats.rs  formats_output.rs  formats_output_tests.rs  formats_tests.rs  mod.rs  variable.rs  variable_output.rs  variable_output_tests.rs  variable_tests.rs
src/options/: get_option_ext.rs  get_option_ext_tests.rs  get_option_tr.rs  get_option_tr_tests.rs  mod.rs  options_ctl.rs  pane_options.rs  server_options.rs  server_options_tests.rs  session_options.rs  session_options_tests.rs  set_option_ext.rs  set_option_ext_tests.rs  set_option_tr.rs  set_option_tr_tests.rs  tmux_options_map.rs  window_options.rs  window_options_tests.rs
src/options2/: mod.rs
src/request/: mod.rs  target_pane.rs  target_pane_tests.rs  target_session.rs  target_session_tests.rs  target_window.rs  target_window_tests.rs
src/response/: client.rs
src/styles/: align.rs  colour.rs  list.rs  mod.rs  range.rs  style.rs  style_list.rs
src/variables/: client.rs  misc.rs  mod.rs
tests/: control_mode_tests.rs  issue1.rs  issue2.rs  mod.rs  panes_tests.rs  readme_examples.rs  sessions_ctl_tests.rs  sessions_tests.rs  tmux.rs  tmux_error_mock.sh  tmux_interface.rs  tmux_mock.sh  tmux_test.sh  variables_and_options.rs  windows_ctl_tests.rs  windows_tests.rs
tests/commands/: direct_access_mode_tests.rs  tmux_interface.rs
tests/control_mode/: control_mode_tests.rs  mod.rs
tests/examples/: example_1.rs  example_2.rs  example_3.rs  example_4.rs  example_5_1_1.rs  example_5_1_2.rs  example_5_1_3.rs  example_5_1_4.rs  mod.rs
tests/issues/: issue1.rs  issue11.rs  issue14.rs  issue15.rs  issue2.rs  issue7.rs  issue8.rs  mod.rs
tests/options_ctl/: mod.rs  options_ctl.rs
tests/variables_ctl/: buffers_ctl_tests.rs  clients_ctl_tests.rs  mod.rs  panes_ctl_tests.rs  variables.rs  windows_ctl_tests.rs
(+661 files in other folders)
